--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,10 @@
     <string name="BeneficiarText">Beneficiar</string>
     <string name="NotăText">Notă</string>
     <string name="info_register_page_bottom">Aveți deja cont? Dați click aici!</string>
-    <string name="info_register_page_top">Vă rugăm introduceți datele dumneavoastră pentru înregistrare</string>
+    <string name="info_register_page_top">Înregistrare</string>
     <string name="termeni_conditii">Accept termenii si conditiile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
