Update UI + MainActivity + CustomAdapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="verificare_parola">Verificare parolă</string>
     <string name="conectareButton">Conectare</string>
     <string name="inregButton">ÎNREGISTRARE</string>
+    <string name="autenButton">AUTENTIFICARE</string>
     <string name="numecontText">Nume cont</string>
     <string name="tipText">Tip</string>
     <string name="monedaText">Monedă</string>
@@ -21,4 +22,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="cont_curent">Cont curent: </string>
+    <string name="continua">Continuă</string>
+
 </resources>
